--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "google/apiclient": "1.0.*@beta",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "laravel/socialite": "~2.0",
+        "facebook/php-sdk-v4" : "~5.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
