--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,10 @@
 
     RewriteEngine On
 
+    RewriteCond %{HTTP_HOST} !^www\.
+    RewriteCond %{HTTPS}s on(s)|offs()
+    RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [NE,L,R]
+
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     # RewriteRule ^(.*)/$ /$1 [L,R=301]
